# IH_DA_finalproject

./: README.md  Untitled.ipynb  Untitled1.ipynb  config.yaml  pyproject.toml  requirements.txt
.ipynb_checkpoints/: config-checkpoint.yaml  first look-checkpoint.ipynb  shortcuts-checkpoint.ipynb  untitled-checkpoint.txt
notebooks/: Inventory_analysis.ipynb  Untitled1.ipynb  cleaning_earthquake_data-Copy1.ipynb  cleaning_earthquake_data.ipynb  cleaning_value2019-2024.ipynb  combining_value+inventory.ipynb  earthquakes+values_exactmatch.csv  filtering_datasets.ipynb  first_look.ipynb  hypothesis_testing.ipynb  knmi_import_api.ipynb  occupation_3.5.csv  occupation_mag1.csv  occupation_mag2.5.csv  occupation_mag2.csv  occupation_mag3.csv  regions_by_numberoccurrences.csv  regions_by_numberoccurrences_top10.csv  trend-parameters-20240925095209.json  value_mag1.5.csv  value_mag2.5.csv  value_mag3.5.csv  value_mag3.csv  values_joined.csv
slides/: ironhackDA_finalp_MDS.pptx  ~$ironhackDA_finalp_MDS.pptx
tableau/: .~final_project2__84148.twbr  .~fp_choropleths+stacked_20241001.1935__51821.twbr  .~fp_choropleths+stacked__34016.twbr  .~fp_choropleths+stacked__45099.twbr  .~fp_single_selected_values+inventory_2__87927.twbr  .~fp_single_selected_values+inventory__39961.twbr  .~magnitude charts__1050.twbr  .~magnitude charts__33500.twbr  .~magnitude charts__34102.twbr  .~magnitude charts__97695.twbr  final_project.twb  fp_choropleths+stacked.twbx  fp_choropleths+stacked_20241001.1935.twbx  fp_single_selected_values+inventory.twb  fp_single_selected_values+inventory_2.twb  (+2 more)
(+49 files in other folders)
